# lightwalletd

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  go.mod  go.sum  hash_test.go  main.go
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
cmd/: root.go  version.go
common/: cache.go  cache_test.go  common.go  common_test.go  darkside.go  generatecerts.go  mempool.go
common/logging/: logging.go  logging_test.go
docs/: architecture.md
docs/rtd/: index.html
frontend/: frontend_test.go  rpc_client.go  service.go
kubernetes/tekton/: pipelinerun.yml
parser/: block.go  block_header.go  block_header_test.go  block_test.go  transaction.go  transaction_test.go
parser/verushash/: CMakeCache.txt  CMakeLists.txt  CMakeListsSWIG.txt  Makefile  blockhash.cpp  cmake_install.cmake  hash.h  solutiondata.cpp  solutiondata.h  verus_hash.go  verushash.cxx  verushash.go  verushash.h  verushash.i  verushashGO_wrap.cxx  verushash_wrap.cxx
parser/verushash/crypto/: arith_uint256.cpp  verus_hash.h
parser/verushash/include/: common.h  uint256.h  verus_clhash.h  verus_hash.h
parser/verushash/src/: haraka.c  haraka_portable.c  uint256.cpp  utilstrencodings.cpp  verus_clhash.cpp  verus_clhash_portable.cpp  verus_hash.cpp
tekton/: resources.yml
testclient/: main.go
testdata/: blocks  compact_blocks.json
testdata/corpus/: block1
testtools/genblocks/: main.go
testtools/zap/: main.go
walletrpc/: compact_formats.pb.go  compact_formats.proto  darkside.pb.go  darkside.proto  generate.go  service.pb.go  service.proto  service_grpc.pb.go
